--- a/src/avc/config/nav/move_base.yaml
+++ b/src/avc/config/nav/move_base.yaml
@@ -1,3 +1,5 @@
 base_local_planner: teb_local_planner/TebLocalPlannerROS
 controller_frequency: 10.0
+recovery_behavior_enabled: true
 clearing_rotation_allowed: false
+conservative_reset_dist: 4.5
