working launch files

--- a/src/avc/package.xml
+++ b/src/avc/package.xml
@@ -6,6 +6,7 @@
 
   <author>Dana Sorensen</author>
   <maintainer email="dana.r.sorensen@gmail.com">Dana Sorensen</maintainer>
+  <license>BSD</license>
 
   <!-- <license>"license</license> -->
 
