--- a/src/avc/config/map.yaml
+++ b/src/avc/config/map.yaml
@@ -1,7 +1,7 @@
 frame_id: map
 image: "$(find avc)/map/map.pgm"
-#resolution: 
-origin: [0.0, 0.0, 0.0]
+resolution: 0.050000 
+origin: [-100.000000, -100.000000, 0.000000]
 occupied_thresh: 0.65
 free_thresh: 0.196
 negate: 0
