--- a/src/avc/config/ekf_global.yaml
+++ b/src/avc/config/ekf_global.yaml
@@ -26,8 +26,8 @@ odom0: /vesc/odom
 odom0_config: [false, false, false,
                false, false, false,
                true , true , false,
-               false, false, false,
-               true , false, false]
+               false, false, true ,
+               false, false, false]
 odom0_differential: false
 odom0_relative: false
 odom0_queue_size: 2
@@ -61,9 +61,9 @@ imu0_differential: false
 imu0_relative: false
 imu0_queue_size: 5
 imu0_remove_gravitational_acceleration: true
-imu0_pose_rejection_threshold: 1
-imu0_twist_rejection_threshold: 1
-imu0_linear_acceleration_rejection_threshold: 1
+#imu0_pose_rejection_threshold: 1
+#imu0_twist_rejection_threshold: 1
+#imu0_linear_acceleration_rejection_threshold: 1
 
 # Possible pose info from AMCL?
 #pose0: example/pose
