--- a/src/avc/config/ekf_local.yaml
+++ b/src/avc/config/ekf_local.yaml
@@ -1,7 +1,7 @@
 frequency: 30
 sensor_timeout: 0.1
 transform_time_offset: 0.0
-two_d_mode: false
+two_d_mode: true
 print_diagnostics: true
 
 debug: false
@@ -26,8 +26,8 @@ odom0: /vesc/odom
 odom0_config: [false, false, false,
                false, false, false,
                true , true , false,
-               false, false, false,
-               true , false, false]
+               false, false, true ,
+               false, false, false]
 odom0_differential: false
 odom0_relative: false
 odom0_queue_size: 2
@@ -47,9 +47,9 @@ imu0_differential: false
 imu0_relative: false
 imu0_queue_size: 5
 imu0_remove_gravitational_acceleration: true
-imu0_pose_rejection_threshold: 1
-imu0_twist_rejection_threshold: 1
-imu0_linear_acceleration_rejection_threshold: 1
+#imu0_pose_rejection_threshold: 1
+#imu0_twist_rejection_threshold: 1
+#imu0_linear_acceleration_rejection_threshold: 1
 
 #process_noise_covariance: [0.05, 0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
                            #0,    0.05, 0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
