--- a/src/avc/config/imu.yaml
+++ b/src/avc/config/imu.yaml
@@ -20,9 +20,9 @@ magn_z_min: -600.0
 magn_z_max: 600.0
 
 # extended calibration
-calibration_magn_use_extended: false
-magn_ellipsoid_center: [0, 0, 0]
-magn_ellipsoid_transform: [[0, 0, 0], [0, 0, 0], [0, 0, 0]]
+calibration_magn_use_extended: true
+magn_ellipsoid_center: [145.522, 34.9572, -309.652]
+magn_ellipsoid_transform: [[0.910677, 0.0203448, -0.00335896], [0.0203448, 0.946875, 0.0531112], [-0.00335896, 0.0531112, 0.943366]]
 
 # AHRS to robot calibration
 imu_yaw_calibration: 0.0
