--- a/src/avc/package.xml
+++ b/src/avc/package.xml
@@ -18,19 +18,33 @@
 
   <!--<build_depend></build_depend>-->
 
-  <run_depend>razor_imu_9dof</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>tf2_ros</run_depend>
-  <run_depend></run_depend>
-  <run_depend>joy</run_depend>
-  <run_depend>joy_teleop</run_depend>
-  <run_depend></run_depend>
   <run_depend>rosbag</run_depend>
   <run_depend>rostopic</run_depend>
   <run_depend>rviz</run_depend>
 
   <!-- mapping -->
   <run_depend>gmapping</run_depend>
+
+  <!-- sensors -->
+  <run_depend>serial</run_depend>
+  <run_depend>razor_imu_9dof</run_depend>
+  <run_depend>sick_tim</run_depend>
+  <run_depend>nmea_navsat_driver</run_depend>
+
+  <!-- localization -->
+  <run_depend>robot_localization</run_depend>
+  <run_depend>amcl</run_depend>
+  <run_depend>map_server</run_depend>
+
+  <!-- navigation -->
+  <run_depend>move_base</run_depend>
+  <run_depend>ackermann_msgs</run_depend>
+
+  <!-- teleop -->
+  <run_depend>joy</run_depend>
+  <run_depend>joy_teleop</run_depend>
 
   <export>
   </export>
