--- a/src/avc/package.xml
+++ b/src/avc/package.xml
@@ -16,7 +16,10 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <!--<build_depend></build_depend>-->
+  <build_depend>roscpp</build_depend>
+  <build_depend>actionlib</build_depend>
+  <run_depend>roscpp</run_depend>
+  <run_depend>actionlib</run_depend>
 
   <run_depend>tf</run_depend>
   <run_depend>tf2_ros</run_depend>
